# yet_another_todo_list

./: .gitignore  LICENSE  README.md  SECURITY.md  TODO.md
.github/: dependabot.yml
.github/workflows/: cargo.yml  docker-backend.yml  docker-frontend.yml
backend/: .env.example  Cargo.toml  Dockerfile
backend/migration/: Cargo.toml
backend/migration/src/: m20220101_000001_create_table.rs
backend/src/: main.rs
backend/src/api/: mod.rs  routes.rs  server.rs
backend/src/db/: database.rs  mod.rs  todo.rs
docker/: .env.example  docker-compose.yml  nginx.conf
docs/Bruno/: Create.bru  Delete.bru  Get all.bru  Get open.bru  Update.bru  bruno.json
frontend/: Dockerfile  package-lock.json  package.json
frontend/src/: index.html  main.js  style.css  table.handlebars
