[package]
name = "yet_another_todo_list"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.5", features = ["macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
sea-orm = { version = "0.12", features = [
    "sqlx-postgres",
    "runtime-tokio-rustls",
    "with-uuid",
] }
uuid = { version = "1.10.0", features = ["v4"] }
dotenvy = "0.15"
log = "0.4"
env_logger = "0.11.3"

[profile.release]
strip = true

[workspace]

members = ["migration"]
